# py-image-dedup

./: .codespellignore  .dockerignore  .gitignore  .travis.yml  Dockerfile  MANIFEST.in  Makefile  Pipfile  README.md  docker-compose.yml  example.py  py_image_dedup_reference.yaml  pyproject.toml  requirements.txt  setup.py  travis.yml
.github/: FUNDING.yml  config.yml  dependabot.yml  stale.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql-analysis.yml  codespell.yml  dockerimage-latest.yml  dockerimage-release.yml  dockerimage-test.yml  main.yml
py-image-dedup/: ImageAnalyzer.py  Main.py
py_image_dedup/: cli.py  config.py  stats.py
py_image_dedup/cli/: Main.py  main.py
py_image_dedup/config/: DeduplicatorConfig.py  __init__.py  deduplicator_config.py
py_image_dedup/persistence/: ElasticSearchStoreBackend.py  FileStoreBackend.py  IdentifierStore.py  ImageSignatureStore.py  MetadataKey.py  StoreEntry.py  __init__.py  elasticsearchstorebackend.py  metadata_key.py
py_image_dedup/test/: SelectImagesToDeleteTest.py  deduplication_test.py  example.py  select_delete_images.py
py_image_dedup/util/: FileUtils.py  ImageUtils.py  __init__.py  file.py  image.py
tests/: TestSelectImagesToDelete.py  __init__.py  py_image_dedup.yaml  test_file_extension.py  test_select_images_to_delete.py
travis/: docker_push  docker_push_latest
